2008-07-03 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add __RTEMS_ADA__.

2008-07-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libnetworking/Makefile.am, libnetworking/libc/gethostnamadr.c,
	libnetworking/libc/getservbyname.c,
	libnetworking/libc/getservbyport.c: Add initial versions of
	getservbyport_r(), gethostbyaddr_r(), and getservbyport_r(). At this
	point they are just simple weappers for the version without the _r in
	the name.

2008-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-prmisc.c, rtems/include/rtems/rtems/attr.h:
	Review association tables in monitor.

2008-06-30 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac, rtems/src/semtranslatereturncode.c,
	score/include/rtems/score/coremutex.h,
	score/include/rtems/score/thread.h,
	score/inline/rtems/score/coremutex.inl,
	score/src/coremutex.c, score/src/coremutexsurrender.c,
	score/src/threadinitialize.c:
	Rename __STRICT_ORDER_MUTEX__ to __RTEMS_STRICT_ORDER_MUTEX__.

2008-06-30 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AM_CONDITIONAL(LIBGNAT).
	* libgnat/Makefile.am: Use LIBGNAT.
	* wrapup/Makefile.am: Use LIBGNAT.

2008-06-30 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* acinclude.m4: Add magic to update cpuopt.h.
	* configure.ac: Remove magic to update cpuopt.h.

2008-06-30 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* acinclude.m4: Add _RTEMS_CPUOPT_INIT, _RTEMS_CPUOPT_FINI.
	* configure.ac: Apply _RTEMS_CPU_INIT, _RTEMS_CPUOPT_FINI.
	Cleanup mal-formated RTEMS_CPUOPT's.

2008-06-30 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4: Require AC_DISABLE_OPTION_CHECKING.
	AC_PREREQ(2.62).

2008-06-19	Matthew Riek <matthew.riek@ibiscomputer.com.au>

	* sapi/include/confdefs.h: Use the PRIORITY_DEFAULT_MAXIMUM rather
	than a number.

2008-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: When you disabled newlib reentrancy, it